[project]
name = "channel-safety-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.0",
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-celery-results>=2.6.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    "whitenoise>=6.11.0",
]
